--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-    --text-color: #DBE4EF;
-    --card-front-color: #144480;
-    --card-back-color: #00F4BF;
+    --text-color: #000000;
+    --card-front-color: #e2844d;
+    --card-back-color: #fa000046;
 }
 
 body {
@@ -45,10 +45,10 @@ body {
 }
 
 .cartao__conteudo p {
-    margin-top: 1rem;
+    margin-top: 0rem;
     padding: 2rem;
-    margin-top: 4rem;
-    font-size: 1.4vw;
+    margin-top: 0rem;
+    font-size: 1.2vw;
 }
 
 .cartao__conteudo__pergunta p {
@@ -76,7 +76,7 @@ body {
 
 .cartao__conteudo__resposta {
     transform: rotateY(180deg);
-    background-color: rgba(0, 244, 191, 0.2);
+    background-color: rgba(70, 188, 224, 0.2);
     border: 4px solid var(--card-back-color);
 }
 
